--- a/quillen.tex
+++ b/quillen.tex
@@ -352,7 +352,7 @@ One of the main utilities of this definition is that it only uses the \emph{prop
 The following example connects this topic with that of \Cref{FormalVarietiesLecture}:
 \begin{example}\todo{Make this clearer: point out that the cofiber definition of the Thom space helps you make the first identification (that's what the ``zero section'' refers to), and then point out that $\zeta^*(M) = M / \sheaf I(0) \cdot M$ helps you over the last hump.}\todo{In class you wrote $\L - 1$ instead of $\L$ almost everywhere in this example.} 
 %If $\L$ denotes the canonical line bundle over $\CP^\infty$, then the zero section identifies $E^0 (\CP^\infty)^{\L}$ \footnote{What does this notation mean?  I would guess it's something like maps $\L \to E^0(\CP^\infty)$, but this doesn't seem to make sense.}with the augmentation ideal in $E^0 \CP^\infty$, and so we have an isomorphism $\ThomSheaf{\L} \cong \sheaf I(0)$.  Then, consider the map $\eps: * \to \CP^\infty$, which classifies a line bundle that Thomifies to $\CP^1 \to \CP^\infty$.  Using naturality, we see \todo{I think you should mention that the tilde means the sheaf associated to the module.  Also, in class you wrote $\pi_{-2} E$ instead of $\pi_2 E$}\[\widetilde{\pi_2 E} \cong \ThomSheaf{* \to \CP^\infty} \cong 0^* \sheaf I(0) \cong \omega_{\G_E},\] where $\G_E = \CP^\infty_E$ is the formal group associated to $E$--theory and $\omega_{\G_E}$ is its sheaf of invariant differentials\footnote{The identification of this with the sheaf of invariant differentials is something of a choice.  Certainly it is naturally isomorphic to $T_0^* \CP^\infty_E$, and this in turn is naturally isomorphic to $\omega_{\G_E}$, but deciding which of these two to write is a decision to be borne out as ``correct''.}.  More generally, if $k \eps$ \todo{It might be confusing using $\eps$ for two different things in the same paragraph.} is the trivial bundle of dimension $k$ over a point, then $\ThomSheaf{k \eps} \cong \omega_{\G_E}^{\otimes k}$.  If $f \co E \to F$ is an $E$--algebra (e.g., $F = E^{X_+}$), then this gives an interpretation of $\pi_{2k} F$ as $f_E^* \omega_{\G_E}^{\otimes k}$.
-If $\L$ denotes the canonical line bundle over $\C P^\infty$, then recall that its Thom complex is $T(\L) \simeq \C P^\infty$.  This is because the total space of the sphere subbundle of $\L$ is contractible: \[ S^1 \rightarrow EU(1) \rightarrow \C P^\infty \xrightarrow{cofib} T(\L). \]  Applying $E^*$ to the same cofiber sequence realizes $E^* T(\L)$ as the kernel of the augmentation map $E^* \C P^\infty \to E^* \S^0$, i.e., $E^* T(\L)$ is the augmentation ideal in $E^* \C P^\infty$.  So we have an isomorphism $\ThomSheaf{\L} \cong \sheaf I (0)$, the ideal sheaf of functions on $\C P^\infty_E$ vanishing at a point.  Then consider the map $\eps: * = \C P^0 \to \C P^\infty$, which classifies a line bundle that Thomifies to $\C P^1 \to \C P^\infty$.  This gives us the identification $\pi_{-*+2} E \cong E^* S^2 \cong E^* T(\epsilon^* L)$, which is a module over $E^* \C P^\infty$.  Using naturality, the associated line bundle over $\C P^\infty$ is \[\widetilde{\pi_{-*+2} E} = \ThomSheaf{\eps^* \L} \cong \eps_E^* \ThomSheaf{\L} \cong \eps_E^* \sheaf I (0).\] Picking a coordinate\todo{Can you do this without coordinates? Yes, sort of! To show that $\eps^* \sheaf I (0) \cong \eps^* \sheaf I (0)/\sheaf I (0)$, consider the SES $0 \to \sheaf I (0)^2 \to \sheaf I (0) \to \sheaf I (0) / \sheaf I (0)^2 \to 0$.  Applying $\eps^*$ and noting that it is right exact, we get a shorter exact sequence $\eps^* \sheaf I (0)^2 \to \eps^* \sheaf I (0) \to \eps* \sheaf I (0)/\sheaf I (0) \to 0$.  We will obtain our desired isomorphism once we show that $\eps^* \sheaf I (0)^2 \to \eps^* \sheaf I (0)$ is the zero map.  This is easily shown in coordinates, but all this is really saying is that a function that vanishes to second order has zero first derivative, once we observe that $\eps^* \sheaf I (0)^n$, i.e., pulling back to a point, only remembers the value of the $n$th derivative $f^{(n)}(0)$ at that point.} $x$ on $\C P^\infty$, we see that $\sheaf I(0)$ is the sheaf of sections of the $E_* \llbracket x \rrbracket$-module $x E_* \llbracket x \rrbracket$, so $\eps_E^* \sheaf I(0)$ is the sheaf of sections of the $E_*$-module \[E_* \otimes_{E_* \llbracket x \rrbracket} x E_* \llbracket x \rrbracket \cong E_* \cdot x$, so on the level of sheaves we have $\eps^* \sheaf I(0) \cong \eps^* \sheaf I(0)/\sheaf I(0)^2 = \eps^* T_0^* \G_E \cong \eps^* \omega_{\G_E}, \] where $\G_E = \CP^\infty_E$ is the formal group associated to $E$--theory and $\omega_{\G_E}$ is its sheaf of invariant differentials\footnote{The identification of this with the sheaf of invariant differentials is something of a choice.  Certainly it is naturally isomorphic to $T_0^* \CP^\infty_E$, and this in turn is naturally isomorphic to $\omega_{\G_E}$, but deciding which of these two to write is a decision to be borne out as ``correct''.}.  More generally, if $k \eps$ \todo{It might be confusing using $\eps$ for two different things in the same paragraph.} is the trivial bundle of dimension $k$ over a point, then $\ThomSheaf{k \eps} \cong \omega_{\G_E}^{\otimes k}$.  If $f \co E \to F$ is an $E$--algebra (e.g., $F = E^{X_+}$), then this gives an interpretation of $\pi_{2k} F$ as $f_E^* \omega_{\G_E}^{\otimes k}$.
+If $\L$ denotes the canonical line bundle over $\C P^\infty$, then recall that its Thom complex is $T(\L) \simeq \C P^\infty$.  This is because the total space of the sphere subbundle of $\L$ is contractible: \[ S^1 \rightarrow EU(1) \rightarrow \C P^\infty \xrightarrow{cofib} T(\L). \]  Applying $E^*$ to the same cofiber sequence realizes $E^* T(\L)$ as the kernel of the augmentation map $E^* \C P^\infty \to E^* \S^0$, i.e., $E^* T(\L)$ is the augmentation ideal in $E^* \C P^\infty$.  So we have an isomorphism $\ThomSheaf{\L} \cong \sheaf I (0)$, the ideal sheaf of functions on $\C P^\infty_E$ vanishing at a point.  Then consider the map $\eps: * = \C P^0 \to \C P^\infty$, which classifies a line bundle that Thomifies to $\C P^1 \to \C P^\infty$.  This gives us the identification $\pi_{-*+2} E \cong E^* S^2 \cong E^* T(\epsilon^* L)$, which is a module over $E^* \C P^\infty$.  Using naturality, the associated line bundle over $\C P^\infty$ is \[\widetilde{\pi_{-*+2} E} = \ThomSheaf{\eps^* \L} \cong \eps_E^* \ThomSheaf{\L} \cong \eps_E^* \sheaf I (0).\] Picking a coordinate\todo{Can you do this without coordinates? Yes, sort of! To show that $\eps^* \sheaf I (0) \cong \eps^* \sheaf I (0)/\sheaf I (0)$, consider the SES $0 \to \sheaf I (0)^2 \to \sheaf I (0) \to \sheaf I (0) / \sheaf I (0)^2 \to 0$.  Applying $\eps^*$ and noting that it is right exact, we get a shorter exact sequence $\eps^* \sheaf I (0)^2 \to \eps^* \sheaf I (0) \to \eps* \sheaf I (0)/\sheaf I (0) \to 0$.  We will obtain our desired isomorphism once we show that $\eps^* \sheaf I (0)^2 \to \eps^* \sheaf I (0)$ is the zero map.  This is easily shown in coordinates, but all this is really saying is that a function that vanishes to second order has zero first derivative, once we observe that $\eps^* \sheaf I (0)^n$, i.e., pulling back to a point, only remembers the value of the $n$th derivative $f^{(n)}(0)$ at that point.} $x$ on $\C P^\infty$, we see that $\sheaf I(0)$ is the sheaf of sections of the $E_* \llbracket x \rrbracket$-module $x E_* \llbracket x \rrbracket$, so $\eps_E^* \sheaf I(0)$ is the sheaf of sections of the $E_*$-module $E_* \otimes_{E_* \llbracket x \rrbracket} x E_* \llbracket x \rrbracket \cong E_* \cdot x$, so on the level of sheaves we have \[\eps^* \sheaf I(0) \cong \eps^* \sheaf I(0)/\sheaf I(0)^2 = \eps^* T_0^* \G_E \cong \eps^* \omega_{\G_E}, \] where $\G_E = \CP^\infty_E$ is the formal group associated to $E$--theory and $\omega_{\G_E}$ is its sheaf of invariant differentials\footnote{The identification of this with the sheaf of invariant differentials is something of a choice.  Certainly it is naturally isomorphic to $T_0^* \CP^\infty_E$, and this in turn is naturally isomorphic to $\omega_{\G_E}$, but deciding which of these two to write is a decision to be borne out as ``correct''.}.  More generally, if $k \eps$ \todo{It might be confusing using $\eps$ for two different things in the same paragraph.} is the trivial bundle of dimension $k$ over a point, then $\ThomSheaf{k \eps} \cong \omega_{\G_E}^{\otimes k}$.  If $f \co E \to F$ is an $E$--algebra (e.g., $F = E^{X_+}$), then this gives an interpretation of $\pi_{2k} F$ as $f_E^* \omega_{\G_E}^{\otimes k}$.
 \todo{There is an issue with grading here.  Really when I wrote $E^*$ I meant $EP^0$ instead, and then I would have to consider $\L - 1$ instead of $\L$, where $T(\L - 1) \cong \Sigma^{-2} \C P^\infty$ to get the rest of the grading right, and also $\pi_* E$ instead of $\pi_0 E$. (I think.) I've noticed this problem elsewhere in the notes, and I think Eric needs to make a choice one and for all either way.}
 \end{example}
 
@@ -440,7 +440,7 @@ The following is a consequence of combining this Lemma with the splitting princi
 The map $Y_E \xrightarrow{f_\xi} X_E$ pulls $\P(\xi)_E$ back to give \[Y_E \times_{X_E} \P(\xi)_E \cong \bigoplus_{i=1}^n \left\{ c_1(\L_i) \right\}. \qed\]
 \end{corollary}
 
-\noindent This says that the splitting principle is a topological enhancement of the claim that a divisor can be base-chnaged along a finite flat map where it splits as a sum of points.  The other theorems from yesterday are also easily matched up with topological counterparts:
+\noindent This says that the splitting principle is a topological enhancement of the claim that a divisor can be base-changed along a finite flat map where it splits as a sum of points.  The other theorems from yesterday are also easily matched up with topological counterparts:
 
 \begin{corollary}\todo{Draw a table comparing the different notions of vector bundles (stable vs unstable, rank $n$ vs virtual rank $n$) to the different notions of Weil divisors.}
 There are natural isomorphisms $BU_E \cong \Div_0 \CP^\infty_E$ and $(BU \times \Z)_E \cong \Div \CP^\infty_E$. Additionally, $(BU \times \Z)_E$ is the free formal group on the curve $\CP^\infty_E$. \qed
