dusts up Lecture 3.8

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -593,7 +593,13 @@ As a running example, you should rephrase a bunch of the results from the previo
 Definition of the inverse functor to the Dieudonn\'e module functor?  I think this appears in the formal groups notes.
 
 
+\begin{corollary}\label{FormOfStabilizerGroup}
+For $\Gamma_d$ the Honda formal group law of height $d$ over a perfect field $k$ of positive characteristic $p$, we compute \[\Aut \Gamma_d \cong \left. \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right..\]
+\end{corollary}
 An easy Corollary of the structure of the Dieudonn\'e ring is the endomorphism ring of the Honda formal group.
+
+
+You could also try to give the Devinatz--Hopkins formula for the stabilizer action.  It's entirely a matter of different presentations of the Dieudonn\'e module... although it may require you to understand Dieudonn\'e crystals, which you are \emph{not} up for.
 
 
 
