--- a/main.bib
+++ b/main.bib
@@ -147,6 +147,24 @@ MRREVIEWER = {Haynes R. Miller},
        URL = {http://dx.doi.org/10.1016/B978-044481779-2/50016-X},
 }
 
+@article {Bousfield,
+    AUTHOR = {Bousfield, A. K.},
+     TITLE = {The localization of spectra with respect to homology},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {18},
+      YEAR = {1979},
+    NUMBER = {4},
+     PAGES = {257--281},
+      ISSN = {0040-9383},
+     CODEN = {TPLGAF},
+   MRCLASS = {55N20 (55N15 55P60)},
+  MRNUMBER = {551009},
+MRREVIEWER = {Willi Meier},
+       DOI = {10.1016/0040-9383(79)90018-1},
+       URL = {http://dx.doi.org/10.1016/0040-9383(79)90018-1},
+}
+
 @article {BuchstaberLazarev,
     AUTHOR = {Buchstaber, Victor and Lazarev, Andrey},
      TITLE = {Dieudonn\'e modules and {$p$}-divisible groups associated with
@@ -321,6 +339,22 @@ MRREVIEWER = {David A. Blanc},
        URL = {http://dx.doi.org/10.2307/120991},
 }
 
+@incollection {HoveyCSC,
+    AUTHOR = {Hovey, Mark},
+     TITLE = {Bousfield localization functors and {H}opkins' chromatic
+              splitting conjecture},
+ BOOKTITLE = {The \v {C}ech centennial ({B}oston, {MA}, 1993)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {181},
+     PAGES = {225--250},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {1995},
+   MRCLASS = {55P42 (55N20 55N22 55P60)},
+  MRNUMBER = {1320994},
+       DOI = {10.1090/conm/181/02036},
+       URL = {http://dx.doi.org/10.1090/conm/181/02036},
+}
+
 @article {HoveyStrickland,
     AUTHOR = {Hovey, Mark and Strickland, Neil P.},
      TITLE = {Morava {$K$}-theories and localisation},
@@ -447,6 +481,22 @@ MRREVIEWER = {Birgit Richter},
    MRCLASS = {14.50},
   MRNUMBER = {0238854 (39 \#214)},
 MRREVIEWER = {J. Dieudonn{\'e}},
+}
+
+@book {Margolis,
+    AUTHOR = {Margolis, H. R.},
+     TITLE = {Spectra and the {S}teenrod algebra},
+    SERIES = {North-Holland Mathematical Library},
+    VOLUME = {29},
+      NOTE = {Modules over the Steenrod algebra and the stable homotopy
+              category},
+ PUBLISHER = {North-Holland Publishing Co., Amsterdam},
+      YEAR = {1983},
+     PAGES = {xix+489},
+      ISBN = {0-444-86516-0},
+   MRCLASS = {55-02 (55Sxx)},
+  MRNUMBER = {738973},
+MRREVIEWER = {Andrzej Kozlowski},
 }
 
 @incollection {Milne,
