we’re probably going to go through Singer’s calculation, add a section for that

--- a/sigma.tex
+++ b/sigma.tex
@@ -408,6 +408,11 @@ Moving from $BU$ to $MU$: $MU\<6\>^E$ is a $\G_m$--torsor over $BU\<6\>^E$, so i
 
 
 
+\section{Unstable additive cooperations for $kU$}
+
+
+
+
 
 
 \section{Elliptic spectra}
