some stuff for the new Lecture 5.1

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -50,7 +50,7 @@ This is also related to recent work of Behrens--Rezk on the Bousfield--Kuhn func
 
 \todo[inline]{Something that these notes routinely fail to do is to lead into the algebraic geometry in a believable way.  ``Today we're going to talk about isogenies'' --- and then, lo' and behold, isogenies appear the next day in algebraic topology.  This book would read much better if it showed how these structures were guessed to exist to begin with.}
 
-Here's a definition of an isogeny.  Weierstrass preparation can be phrased as saying that a Weierstrass map is a coordinate change and a standard isogeny.\todo{Where does this come from?  It's Strickland's, I know that.}
+Here's a definition of an isogeny.  Weierstrass preparation can be phrased as saying that a Weierstrass map is a coordinate change and a standard isogeny.\citeme{Definition 5.17 of FSFG}
 \begin{definition}
 Take $C$ and $D$ to be formal curves over $X$.  A map $f: C \to D$ is an \textit{isogeny} when the induced map $C \to C \times_X D$ exhibits $C$ as a divisor on $C \times_X D$ as $D$--schemes.
 \end{definition}
