--- a/main.tex
+++ b/main.tex
@@ -161,6 +161,7 @@
 \newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
 \newcommand{\FGps}{\mathrm{FGps}}
 
+\DeclareMathOperator{\Ind}{Ind}
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Spf}{Spf}
 \DeclareMathOperator{\Sch}{Sch}
