add a warning from Yifei about Matt’s thesis

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -28,6 +28,8 @@ In particular, leave character theory, $p$--divisible groups, and rational pheno
 
 \todo[inline]{Nat warns that the very end of Matt's thesis uses character theory for $S^1$, which you have to be very careful about to pull off correctly.  ($S^1$ is not a finite group, but in certain contexts it can be approximated by its torsion subgroups...)}
 
+\todo[inline]{Yifei warned me that Matt's ``there exists a unique coordinate...''\ Lemma is specifically about lifting the \emph{Honda} formal group law over $\F_q$.  If you want to do this with elliptic cohomology or something, then you need a stronger statement (and it's clear what this statement should be, but no one has proven it).}
+
 
 
 
