advice from the internet on how to incorporate git state

--- a/class-info.tex
+++ b/class-info.tex
@@ -26,4 +26,4 @@ If you're taking the class or otherwise want to contribute, you can write me at
 \end{center}
 to request write access.
 
-This document was compiled on \today. This may not reflect when it was cloned from git, though.\todo{I would like this to print the git HEAD's id, if it exists.}
+This document was compiled on \today. This may not reflect when it was cloned from git, though.\todo{I would like this to print the git HEAD's id, if it exists.  See https://www.ctan.org/tex-archive/macros/latex/contrib/gitinfo2 .}
