--- a/sigma.tex
+++ b/sigma.tex
@@ -63,6 +63,10 @@ Use this to construct the various stable divisor schemes and verify the freeness
 
 
 
+Cartier duality
+
+
+
 Maybe build the ring $C_*(\G)$?  Or at least indicate that it's possible?
 
 
