the first half of Lecture 4.5 is written

--- a/finite.tex
+++ b/finite.tex
@@ -394,7 +394,7 @@ We will prove Claim 1 tomorrow.
 
 
 
-\section{The structure of $\moduli{fg}$ I: Distance from $\G_a$}
+\section{The structure of $\moduli{fg}$ I: Distance from $\G_a$}\label{MfgI:Height}
 
 We begin by finishing up our proof of Lazard's theorem (and, specifically, the Symmetric $2$--cocycle Lemma).
 
@@ -454,7 +454,7 @@ The series $\ell$ is a partial logarithm for the formal group law $\phi$, i.e., 
 \end{proof}
 
 With this in mind, we look for a more standard form for formal group laws, where \Cref{FGLHeightIsAnInteger} will hopefully be obvious.  In light of our goal, the most obvious standard form is as follows:
-\begin{definition}
+\begin{definition}\label{DefnpTypicalLog}
 Suppose that a formal group law $+_\phi$ does have a logarithm.  We say that $+_\phi$ has a \textit{$p$--typical logarithm} in the case that its logarithm has the form \[\log_\phi(x) = \sum_{j=0}^\infty \ell_j x^{p^j}.\]
 \end{definition}
 
