--- a/cooperations.tex
+++ b/cooperations.tex
@@ -377,7 +377,7 @@ This is an impressively broad theorem: the loopspaces $\OS{MU}{2*}$ are quite co
 
 \section{Dieudonn\'e modules}
 
-Our goal today is strictly algebraic: we have seen that the category of finite dimension Hopf algebras over a ground field $k$ is an abelian category.  This means that it admits a presentation as the module category for some (possibly noncommutative) ring.  The description of this ring and of the explicit assignment from a group scheme to linear algebraic data is the subject of \textit{Dieudonn\'e theory}.  We will give a survey of some of the results of Dieudonn\'e theory today, starting with three different presentations of the subject.
+Our goal today is strictly algebraic: we have seen that the category of finite dimension Hopf algebras over a ground field $k$ is an abelian category.  This means that it admits a presentation as the module category for some (possibly noncommutative) ring.  The description of this ring and of the explicit assignment from a group scheme to linear algebraic data is the subject of \textit{Dieudonn\'e theory}.  We will give a survey of some of the results of Dieudonn\'e theory today, starting with three different presentations of the subject.\footnote{Emphasis on ``\emph{some of the results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry.}
 
 \citeme{Weinstein's geometry of Lubin--Tate spaces notes}
 Start with a formal line $V$ over a ground ring $k$, let $\G$ denote $V$ equipped with a group structure, and let $\Omega^1_{V/k}$ be the module of K\"ahler differentials on $V$.  We have previously been interested in the \textit{invariant differentials} $\omega_{\G} \subseteq \Omega^1_{V/k}$ on $V$.  In the case that $k$ was a $\Q$--algebra, we saw that all differentials can be integrated and hence we gain access to a logarithm for $\G$.  On the other hand, if $k$ has positive characteristic $p$ then there's an obstruction to integrating terms with exponents of the form $-1 \pmod p$, which led us to the notion of $p$--height explored in \Cref{MfgI:Height}.
@@ -433,7 +433,7 @@ This is independent of choice of lift up to coherent isomorphism.  Given any oth
 
 Finally, note that the module $M(\G_0)$ carries some natural operations:
 \begin{itemize}
-\item Homothety: $M(\G_0)$ is naturally a $\W_p(k)$--module.
+\item Arithmetic: $M(\G_0)$ is naturally a $\W_p(k)$--module.
 \item Frobenius: The map $x \mapsto x^p$ is a group homomorphism mod $p$, so by \Cref{H1dRIsCrystalline} induces a $\phi$--semilinear map $F\co M(\G_0) \to M(\G_0)$, i.e., one satisfies $F(\alpha v) = \alpha^\phi F(v)$, where $\phi$ is a lift of the Frobenius on $k$ to $\W_p(k)$.
 \item Verschiebung: The Verschiebung map is given by the mysterious formula\todo{Is this a non-mysterious formula?} \[V\co \sum_{n=1}^\infty a_n x^n \mapsto p \sum_{n=1}^\infty a_{pn}^{\phi^{-1}} x^n.\] It satisfies anti-semilinearity, $aV(v) = V(a^\phi v)$, and also $FV = p$.
 \end{itemize}
@@ -446,6 +446,13 @@ The functor $M$ determines a contravariant equivalence of categories between smo
 \begin{remark}
 Several invariants of the formal group associated to a Dieudonn\'e module can be read off from the functor $M$.  For example, the $\W_p(k)$--rank of $M$ is equal to the $p$--height of $\G_0$.  Additionally, the quotient $M / FM$ is canonically isomorphic to the cotangent space $T_0^* \G_0 \cong \omega_{\G_0}$.  However, the subspace of $M$ spanned by $\omega_{\G}$ is \emph{sensitive to choice of lift}, unlike the rest of this construction.  This observation is the wellspring of the Gross--Hopkins period map.
 \end{remark}
+
+\begin{corollary}\label{FormOfStabilizerGroup}
+For $\Gamma_d$ the Honda formal group law of height $d$ over $\F_{p^d}$, we compute \[\Aut \Gamma_d \cong \left. \W_p(k) \<F\> \middle/ \left( \begin{array}{c} Fw = w^\phi F, \\ F^d = p \end{array} \right) \right.^\times.\]
+\end{corollary}
+\begin{proof}
+The Dieudonn\'e module associated to $\Gamma_d$ satisfies $F^d = p$, and hence $M(\Gamma_d/k)$ is presented as a \emph{quotient} of the ring of operators on Dieudonn\'e modules.  The endomorphism ring of such a module is canonically isomorphic to the module itself.
+\end{proof}
 
 We now turn to alternative presentations of the Dieudonn\'e module functor, which have their own advantages and disadvantages.  Let $\G$ again be a formal Lie group over a field $k$ of positive characteristic $p$, and consider Cartier's \textit{functor of curves} \[C\G = \CatOf{FormalSchemes}(\A^1, \G).\]  This is, again, a kind of relaxing of familiar data from Lie theory: rather than studying exponential curves, $C\G$ tracks all possible curves.  In \Cref{MfgI:Height}, we considered three kinds of operations on a given curve $\gamma\co \A^1 \to \G$:
 \begin{itemize}
@@ -469,64 +476,28 @@ Surprisingly, this construction captures the same data as the previous one.
 The functor $D_p$ determines a \emph{covariant} equivalence of categories between smooth $1$--dimensional formal groups over $k$ of finite $p$--height and finite free $\W_p(k)$--modules equipped with appropriate operations $F$ and $V$.  In fact, $D_p(\G) \cong M(\G/k)^*$. \qed \todo{Add in words about being uniform and reduced?}
 \end{theorem}
 
+Finally, we turn to a third presentation of the Dieudonn\'e module of a formal group, using more pedestrian methods.  One can show that the category of \emph{finite--dimensional} graded connected Hopf algebras is an abelian category, and hence must admit a presentation as modules over some (perhaps noncommutative) ring.  The first step to accessing this presentation is to find a collection of projective generators for this category.
 
-
-
-
-Define $S(n)$ to be the free Hopf algebra on a single generator in degree $n$, so that at odd primes $S(2n+1) = \Lambda[x]$ and $S(2n) = P[x]$ (and at $p = 2$ all the $S(n)$ are polynomial algebras).  Schoeller proves that there's a projective cover $H(n) \to S(n)$.  Most of the time this map is the identity, except in the two cases: $p = 2$ and $n = 2^m k$ for $k$ odd and $m > 0$, or $p > 2$ and $n = 2p^m k$ for $p \nmid k$ and $m > 0$.  In these exceptional cases, $H(n) = \F_p[x_0, x_1, \ldots, x_k]$ with the ``Witt vector diagonal''.
-
-the projective generators
-
-$\CatOf{HopfAlgebras}^{> 0}_{\F_p/}$
-
-Classification of finite Hopf algebras over $\F_p$ with $\Gm$--action
-
-The $H(n)$ form a series of projective \emph{generators} of the category.  So, we can give a Tannakian description of the category as modules over the ``endomorphism ring'' $\mathsf{Hom}(H(*), H(*))$, which is calculable.  You end up seeing the same data as a covariant Dieudonn\'e module, which is cool, and generally given a Hopf algebra $H$ you can build a graded Dieudonn\'e module functor by \[D_n(H) = \CatOf{HopfAlgebras}_{/\F_p}(H(n), H).\]
-
----
-
-We have only described a framework for encoding Hopf algebras so far.  We also want to incorporate Hopf rings into our discussion, since we are coming off of the study of unstable cooperations.  Hunton and Turner were among the first to consider ``bilinear'' constructions on Hopf algebras in the abstract, and a similar study of bilinearity on the level of Dieudonn\'e modules is due to Goerss and to Buchstaber--Lazarev.  Our definitions are motivated by the following observation:
-
-\begin{lemma}\citeme{Lemma 7.6 of Goerss's bilinear paper, Lemma 7.1.c of Ravenel--Wilson}
-The pairing \[\circ \co D(K_\Gamma \OS{H\Z/p^j}{k_1}) \times D(K_\Gamma \OS{H\Z/p^j}{k_2}) \to D(K_\Gamma \OS{H\Z/p^j}{k_1 + k_2})\] is bilinear in $\W(k)$ and satisfies
-\begin{align*}
-V(x \circ y) & = Vx \circ Vy, &
-Fx \circ y & = F(x \circ Vy), &
-x \circ Fy & = F(Vx \circ y). \qed
-\end{align*}
-\end{lemma}
-
-\begin{definition}
-The naive tensor product $M \otimes N$ of Dieudonn\'e modules $M$ and $N$ receives the structure of a $\W(k)[V]$--module.  We define the \textit{tensor product of Dieudonn\'e modules} by \[M \boxtimes N = \left.\W(k)[F, V] \otimes_{\W(k)[V]} (M \otimes N) \middle/ \left( \begin{array}{c} 1 \otimes Fx \otimes y = F \otimes x \otimes Vy, \\ 1 \otimes x \otimes Fy = F \otimes Vx \otimes y \end{array} \right) \right. .\]
-\end{definition}
-
-\begin{theorem}\citeme{Theorem 7.7 of Goerss's bilinear paper}
-The natural map \[D(M) \boxtimes D(N) \to D(M \boxtimes N)\] is an isomorphism. \qed
+\begin{theorem}[{\cite{Schoeller}}]
+Let $S(n)$ denote the free graded-commutative Hopf algebra on a single generator in degree $n$.  There is a projective cover $H(n) \onto S(n)$, given by the formula
+\begin{itemize}
+\item If either $p = 2$ and $n = 2^m k$ for $2 \nmid k$ and $m > 0$ \emph{or} $p \ne 2$ and $n = 2p^m k$ for $p \nmid k$ and $m > 0$, then $H(n) = \F_p[x_0, x_1, \ldots, x_k]$ with the Witt vector diagonal.\todo{Put in a citation about what ``the Witt vector diagonal'' means.}
+\item Otherwise, $H(n) = S(n)$ is the identity.
+\qed
+\end{itemize}
 \end{theorem}
 
-Goerss also talks about ``Hopf ring hom'', and how, since many of the Hopf rings appearing in algebraic topology are ``free'', Hopf ring hom off of them agrees with just Hopf algebra hom (or Dieudonne module hom) off of their generating object.  That's probably worth pointing out, since nonadditive unstable operations seem so unwieldy.\todo{It's weird, though, because restricting to additive unstable operations means passing to $\ast$--indecomposables?  That is, the freeness of the $\circ$--product doesn't really seem to get you out of all that much trouble.  I guess a related question is: what's the relationship between $Q^\ast$ and the free Dieudonn\'e algebra functor?  Do they commute?  Almost certainly not...}
-
-
-You can write down a tensor product for Hopf algebras.  Equation 7.6 has a description of the box tensor functor for Dieudonn\'e modules.  The Dieudonn\'e module functor is monoidal for these two products.\citeme{Corollary 8.14 of Goerss's bilinear paper}
-
-
-As a running example, you should rephrase a bunch of the results from the previous lecture (on $K(d)_* \OS{Hk}*$) in terms of Dieudonn\'e modules.
-
-\begin{remark}
-\todo[inline]{There's also Chapter 3 of Hopkins--Lurie, which constructs an alternating power group scheme without passing through Dieudonn\'e modules.  It should at least be mentioned.}
-\end{remark}
-
-
-Definition of the inverse functor to the Dieudonn\'e module functor?  I think this appears in the formal groups notes.
-
-
-\begin{corollary}\label{FormOfStabilizerGroup}
-For $\Gamma_d$ the Honda formal group law of height $d$ over a perfect field $k$ of positive characteristic $p$, we compute \[\Aut \Gamma_d \cong \left. \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right..\]
+\begin{corollary}
+It follows that the category $\CatOf{HopfAlgebras}^{> 0, fin}_{\F_p/}$ of finite--dimensional graded connected Hopf algebras is a full subcategory of modules over \[\bigoplus_n \CatOf{HopfAlgebras}^{> 0, fin}_{\F_p/}(H(n), H(n)). \qed\]
 \end{corollary}
-An easy Corollary of the structure of the Dieudonn\'e ring is the endomorphism ring of the Honda formal group.
+
+\begin{theorem}
+Write $D_n(H)$ for the $n${\th} graded part of the equivalence: \[D_n(H) = \CatOf{HopfAlgebras}_{/\F_p}(H(n), H).\]  For $\G$ a formal group of finite height, the system \[\lim_{j \to \infty} \bigoplus_n D_n\left(\sheaf O_{\G[p^j]}\right)\] is naturally equivalent to the covariant Dieudonn\'e module $D_p(\G)$. \qed
+\end{theorem}
 
 
-You could also try to give the Devinatz--Hopkins formula for the stabilizer action.  It's entirely a matter of different presentations of the Dieudonn\'e module... although it may require you to understand Dieudonn\'e crystals, which you are \emph{not} up for.
+\todo[inline]{It would be nice to tie these presentations together, at least with unjustified claims.  What curve does a cohomologically left-invariant form get sent to?  What does the appearance of the Witt scheme in the third presentation tell you about the relationship to the second presentation?}
+
 
 
 
@@ -535,7 +506,9 @@ You could also try to give the Devinatz--Hopkins formula for the stabilizer acti
 
 \todo{Dieudonn\'e theory is also about taking primitives in some sort of cohomology.  Can this be connected to the additivity condition on unstable operations?}
 \todo{Weinstein's Section 1 also ends with a discussion of the Dieudonn\'e functor extended to the crystalline site.  This is necessary to get access to the period map.}
+\todo{Definition of the inverse functor to the Dieudonn\'e module functor?  I think this appears in the formal groups notes.}
 \todo[inline]{We know of a connection between $H_* BU$ and the Witt scheme.  Is there a connection between $E_* MU$ and curves, or $E_* BP$ and $p$--typical curves, which is visible from this perspectve?  Almost definitely!  Also, a connection between curves and divisors: the zero locus of a given curve...}
+\todo{You could also try to give the Devinatz--Hopkins formula for the stabilizer action.  It's entirely a matter of different presentations of the Dieudonn\'e module... although it may require you to understand Dieudonn\'e crystals, which you are \emph{not} up for.}
 
 
 
@@ -598,6 +571,34 @@ Goerss's result on $H_* \OS{E}{*}$ for Landweber flat $E$.  The main point is th
 
 
 \todo[inline]{Ask Mike (and Jacob?) if there are analogues of these results for $kO$ which explain Mahowald's generalized $K$--theoretic Brown--Gitler spectra.}
+
+
+----
+
+
+We have only described a framework for encoding Hopf algebras so far.  We also want to incorporate Hopf rings into our discussion, since we are coming off of the study of unstable cooperations.  Hunton and Turner were among the first to consider ``bilinear'' constructions on Hopf algebras in the abstract, and a similar study of bilinearity on the level of Dieudonn\'e modules is due to Goerss and to Buchstaber--Lazarev.  Our definitions are motivated by the following observation:
+
+\begin{lemma}\citeme{Lemma 7.6 of Goerss's bilinear paper, Lemma 7.1.c of Ravenel--Wilson}
+The pairing \[\circ \co D(K_\Gamma \OS{H\Z/p^j}{k_1}) \times D(K_\Gamma \OS{H\Z/p^j}{k_2}) \to D(K_\Gamma \OS{H\Z/p^j}{k_1 + k_2})\] is bilinear in $\W(k)$ and satisfies
+\begin{align*}
+V(x \circ y) & = Vx \circ Vy, &
+Fx \circ y & = F(x \circ Vy), &
+x \circ Fy & = F(Vx \circ y). \qed
+\end{align*}
+\end{lemma}
+
+\begin{definition}
+The naive tensor product $M \otimes N$ of Dieudonn\'e modules $M$ and $N$ receives the structure of a $\W(k)[V]$--module.  We define the \textit{tensor product of Dieudonn\'e modules} by \[M \boxtimes N = \left.\W(k)[F, V] \otimes_{\W(k)[V]} (M \otimes N) \middle/ \left( \begin{array}{c} 1 \otimes Fx \otimes y = F \otimes x \otimes Vy, \\ 1 \otimes x \otimes Fy = F \otimes Vx \otimes y \end{array} \right) \right. .\]
+\end{definition}
+
+\begin{theorem}\citeme{Theorem 7.7 of Goerss's bilinear paper}
+The natural map \[D(M) \boxtimes D(N) \to D(M \boxtimes N)\] is an isomorphism. \qed
+\end{theorem}
+
+Goerss also talks about ``Hopf ring hom'', and how, since many of the Hopf rings appearing in algebraic topology are ``free'', Hopf ring hom off of them agrees with just Hopf algebra hom (or Dieudonne module hom) off of their generating object.  That's probably worth pointing out, since nonadditive unstable operations seem so unwieldy.\todo{It's weird, though, because restricting to additive unstable operations means passing to $\ast$--indecomposables?  That is, the freeness of the $\circ$--product doesn't really seem to get you out of all that much trouble.  I guess a related question is: what's the relationship between $Q^\ast$ and the free Dieudonn\'e algebra functor?  Do they commute?  Almost certainly not...}
+
+
+You can write down a tensor product for Hopf algebras.  Equation 7.6 has a description of the box tensor functor for Dieudonn\'e modules.  The Dieudonn\'e module functor is monoidal for these two products.\citeme{Corollary 8.14 of Goerss's bilinear paper}
 
 
 
@@ -678,6 +679,10 @@ If $A$ is a connected $p$--divisible Hopf $k$--algebra, then \[k \to A[p^j] \to 
 \citeme{Proof of 2.4.12 from Hopkins--Lurie} Now we have to identify the Hopf algebra structure on this (as an alternating power).
 
 \todo[inline]{\textbf{Maybe the right thing to do here is to postpone the proof of 2.4.12 until tomorrow, when we introduce Dieudonn\'e theory?  It looks pretty heavy, and it's definitely Dieudonn\'e-y.}}
+
+\begin{remark}
+\todo[inline]{There's also Chapter 3 of Hopkins--Lurie, which constructs an alternating power group scheme without passing through Dieudonn\'e modules.  It should at least be mentioned.}
+\end{remark}
 
 
 
