--- a/cooperations.tex
+++ b/cooperations.tex
@@ -15,7 +15,7 @@ Today we will take the framework of contexts discussed in \Cref{StableContextLec
 \CatOf{Spectra} = \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} & \CatOf{Modules}_E \arrow[shift left=0.4em]{l}
 \end{tikzcd}
 \end{center}
-induced by the algebra map $\S \to E$.  Given a spectrum $X$, our framework was set up to give the best possible approximation $X^\wedge_E$ within $E$--module spectra.
+induced by the algebra map $\S \to E$.  Given a spectrum $X$, our framework was set up to give its best possible approximation $X^\wedge_E$ within $E$--module spectra.
 
 We will extend this to spaces by sewing this adjunction together with another:
 \begin{center}
@@ -23,7 +23,7 @@ We will extend this to spaces by sewing this adjunction together with another:
 \CatOf{Spaces} \arrow[shift left=0.4em]{r}{\Susp^\infty} & \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} \arrow[shift left=0.4em]{l}{\Loops^\infty} & \CatOf{Modules}_E \arrow[shift left=0.4em]{l} .
 \end{tikzcd}
 \end{center}
-We will write $E(-)$ for the induced monad\todo{You avoided talking about \emph{monadic} descent in the previous lectures, and instead you were vague about it. Maybe you have to spell that out now.} on $\CatOf{Spaces}$, given by the formula \[E(X) = \colim_{j \to \infty} \Loops^j (\OS{E}{j} \sm X) = \Loops^\infty (E \sm \Susp^\infty X),\] where $\OS{E}{*}$ are the constituent spaces in the $\Omega$--spectrum of $E$.  This space has the property that $\pi_* E(X) = \widetilde E_* X$ (in nonnegative dimensions).  The monadic structure comes from the two evident natural transformations:
+We will write $E(-)$ for the induced monad \todo{You avoided talking about \emph{monadic} descent in the previous lectures, and instead you were vague about it. Maybe you have to spell that out now.}on $\CatOf{Spaces}$, given by the formula \[E(X) = \colim_{j \to \infty} \Loops^j (\OS{E}{j} \sm X) = \Loops^\infty (E \sm \Susp^\infty X),\] where $\OS{E}{*}$ are the constituent spaces in the $\Omega$--spectrum of $E$.  This space has the property that $\pi_* E(X) = \widetilde E_* X$ (in nonnegative dimensions).  The monadic structure comes from the two evident natural transformations:
 \begin{align*}
 \eta \co X & \simeq S^0 \sm X \\
 & \to \OS{E}{0} \sm X \\
