first comments about identifying the B-G spectra in Lecture 4.6

--- a/main.tex
+++ b/main.tex
@@ -126,6 +126,7 @@
 \newcommand{\cotensor}{\square}
 \newcommand{\from}{\leftarrow}
 \newcommand{\onto}{\twoheadrightarrow}
+\newcommand{\mhyphen}{\text{-}}
 
 \renewcommand{\th}{\textsuperscript{th}}
 \newcommand{\st}{\textsuperscript{st}}
